[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/game_config_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/game_config_settings_visualizer.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/input_listener.gd" type="Script" id=3]
[ext_resource path="res://scripts/settings_overview.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/im_fell_english.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/game_config.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/settings/modes.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/settings/arenas.png" type="Texture" id=8]
[ext_resource path="res://scripts/particles.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SettinsgHighlight"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7.8, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Settings" type="Node2D" parent="."]
position = Vector2( 1573.59, 515.781 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Settings"]
texture = ExtResource( 2 )

[node name="Modes" type="Sprite" parent="Settings"]
position = Vector2( 214.96, -234.76 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
hframes = 4
vframes = 4

[node name="Arenas" type="Sprite" parent="Settings"]
position = Vector2( 214.96, -96.1665 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
hframes = 4
vframes = 4

[node name="HintLabel" type="Label" parent="Settings"]
margin_left = -255.4
margin_top = -28.2182
margin_right = 283.6
margin_bottom = 42.7818
custom_colors/font_color = Color( 0.0901961, 0.0509804, 0, 0.694118 )
custom_fonts/font = SubResource( 1 )
text = "Explore these settings to try other modes and arenas, or add cool new stuff to your games!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerupContainer" type="Node2D" parent="Settings"]
position = Vector2( 216.658, 71.7879 )

[node name="ThrowableContainer" type="Node2D" parent="Settings"]
position = Vector2( 214.876, 151.969 )

[node name="SettingContainer" type="Node2D" parent="Settings"]
position = Vector2( 218.37, 233.345 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Settings"]
autoplay = "SettinsgHighlight"
anims/RESET = SubResource( 2 )
anims/SettinsgHighlight = SubResource( 3 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( 612.173, 495 )

[node name="Particles" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="InputListener" type="Node" parent="."]
script = ExtResource( 3 )
